--- a/404.html
+++ b/404.html
@@ -55,7 +55,23 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://windyJoy.github.io/404.html">
+</noscript>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
+
+
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/contrib/auto-render.min.js"
+    onload="renderMathInElement(document.body, {
+      delimiters: [
+        {left: '$$', right: '$$', display: true},
+        {left: '$', right: '$', display: false},
+        {left: '\\(', right: '\\)', display: false},
+        {left: '\\[', right: '\\]', display: true}
+      ],
+    });"></script>
+
+<meta property="og:url" content="https://windyJoy.github.io/404.html">
   <meta property="og:site_name" content="windyJoy">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="en">
