--- a/404.html
+++ b/404.html
@@ -122,6 +122,11 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://windyJoy.github.io/tags/" title="Tags">
+                    <span>Tags</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
